# kb

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  TODO.md  WEB_API_README.md  config.example.toml  config.toml  docker-compose.yml  env.example  kb-service.spec  plan.md  pyproject.toml  start_web.py  test_api.py  tests.http  tests.http.env.json
scripts/: dev.sh  docker-entrypoint.sh  install.sh  run_service.py
src/agents/: __init__.py  runtime.py
src/api/: dependencies.py  main.py
src/api/models/: __init__.py  chat.py  documents.py
src/api/routes/: __init__.py  admin.py  chat.py  documents.py  health.py  tasks.py
src/kb/: main.py  tests.http
src/kb/api/: __init__.py  dependencies.py  main.py
src/kb/api/models/: chat.py  documents.py
src/kb/api/routes/: chat.py  documents.py  health.py
src/kb/core/: __init__.py  rag_engine.py  task_manager.py
src/knowledge/: __init__.py  service.py
src/rag_demo/: __init__.py  main.py
src/services/: __init__.py  conversation_service.py  task_manager.py
src/shared/: __init__.py  config_loader.py  config_schema.py  logging_config.py  request_logging.py
tests/: test_logging_smoke.py
