[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-demo"
version = "0.1.0"
description = "A RAG demo using LlamaIndex"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "RAG Demo" },
]
dependencies = [
    "llama-index-core>=0.12.0",
    "llama-index-llms-openai>=0.3.0",
    "llama-index-llms-ollama>=0.3.0",
    "llama-index-embeddings-huggingface>=0.3.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.25.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "llama-index-llms-deepseek>=0.1.2",
    "llama-index-llms-openai-like>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100 
